--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@angular/upgrade": "^6.0.0",
+    "@ngrx/store": "^6.1.0",
     "angular-in-memory-web-api": "^0.6.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
