--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng-snotify": "^4.3.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.24"
   },
